--- a/index.html
+++ b/index.html
@@ -19,20 +19,19 @@
         <div class="container">
             <div class="content">
                 <label for="iUserName">Nome do usuário:</label>
-                <input type="text" name="Name" id="iUserName" placeholder="Seu nome:" oninput="CheckForm()">
+                <input type="text" name="Name" id="iUserName" placeholder="Seu nome:">
                 <p class="Message"></p>
             </div>
 
             <div class="content">
                 <label for="iEmail">Seu email: </label>
-                <input type="email" name="email" id="iEmail" placeholder="Digite seu email" oninput="CheckForm()">
+                <input type="email" name="email" id="iEmail" placeholder="Digite seu email">
                 <p class="Message"></p>
             </div>
 
             <div class="content">
                 <label for="iPassword">Digite sua senha: </label>
-                <input type="password" name="iPassword" id="iPassword" placeholder="Digite sua senha: "
-                    oninput="CheckForm()">
+                <input type="password" name="iPassword" id="iPassword" placeholder="Digite sua senha: ">
                 <p class="Message"></p>
                 <div class="PasswordConfigs">
                     <ul>
@@ -46,8 +45,7 @@
 
             <div class="content">
                 <label for="iConfirm">Confirme sua senha</label>
-                <input type="password" name="passwordConfirm" id="iConfirm" placeholder="Confirme sua senha: "
-                    oninput="CheckForm()">
+                <input type="password" name="passwordConfirm" id="iConfirm" placeholder="Confirme sua senha: ">
                 <p class="Message"></p>
             </div>
         </div>
